# gqlxy-core

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
cmake/: dependencies.cmake  gqlxy-core-config.cmake.in
include/gqlxy/: results.h  task.h
include/gqlxy/parser/ast/: Selection.h  argument.h  directive.h  document.h  fragment_definition.h  fragments.h  operation_definition.h  selection_set.h  variable_definition.h
include/gqlxy/parser/introspection/types/: type_ref.h
include/gqlxy/parser/peg/parser/: parse_type_ref.h
include/gqlxy/parser/peg/parser/query/: parse_arguments.h  parse_directives.h  parse_document.h  parse_field.h  parse_fragment_definition.h  parse_fragment_spread.h  parse_inline_fragment.h  parse_operation_definition.h  parse_operations.h  parse_selection.h  parse_selection_set.h  parse_value.h  parse_variable_definition.h
include/gqlxy/utils/: expect.h  optional.h  ranges.h  visit.h
include/gqlxy/utils/peg/: first_node.h  is_type.h
src/: CMakeLists.txt
src/gqlxy/: results.cpp
src/gqlxy/parser/ast/: argument.cpp
src/gqlxy/parser/introspection/types/: type_ref.cpp
src/gqlxy/parser/peg/parser/: parse_type_ref.cpp
src/gqlxy/parser/peg/parser/query/: parse_arguments.cpp  parse_directives.cpp  parse_document.cpp  parse_field.cpp  parse_fragment_definition.cpp  parse_fragment_spread.cpp  parse_inline_fragment.cpp  parse_operation_definition.cpp  parse_operations.cpp  parse_selection.cpp  parse_selection_set.cpp  parse_value.cpp  parse_variable_definition.cpp
tests/: CMakeLists.txt
tests/unit/: optional.tests.cpp  query_parser.tests.cpp
